cart alignment fix

--- a/css/product.css
+++ b/css/product.css
@@ -348,7 +348,7 @@
 .cart_product_image img {
   max-width: 90%;
   height: 120%;
-  margin-top: -20%;
+  margin-top: -50%;
 }
 .cart_product_image {
   float: left;
